--- a/Safepal/app/build.gradle
+++ b/Safepal/app/build.gradle
@@ -17,32 +17,31 @@ repositories {
 
 
 android {
-    compileSdk 30
-    buildToolsVersion "30"
+    compileSdk 33
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.unfpa.safepal"
         minSdkVersion 18
-        targetSdkVersion 30
+        targetSdkVersion 33
         multiDexEnabled true
-        versionCode 48
-        versionName "1.3.5"
+        versionCode 52
+        versionName "1.3.9"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         localhost {
-            buildConfigField "String", "DJANGO_BACKEND_URL", '"http://10.0.2.2/api/v1"'
-            buildConfigField "String", "BASE_API_URL", '"http://ec2-54-184-113-209.us-west-2.compute.amazonaws.com/api/v1"'
+            buildConfigField "String", "DJANGO_BACKEND_URL", '"https://safepalcms.mglsd.go.ug"'
+            buildConfigField "String", "BASE_API_URL", '"https://safepalapi.mglsd.go.ug/api/v1"'
         }
 
         debug {
-            buildConfigField "String", "DJANGO_BACKEND_URL", '"https://testwebdashboard.safepal.co/"'
-            buildConfigField "String", "BASE_API_URL", '"http://ec2-54-184-113-209.us-west-2.compute.amazonaws.com/api/v1"'
+            buildConfigField "String", "DJANGO_BACKEND_URL", '"https://safepalcms.mglsd.go.ug"'
+            buildConfigField "String", "BASE_API_URL", '"https://safepalapi.mglsd.go.ug/api/v1"'
         }
 
         release {
-            buildConfigField "String", "DJANGO_BACKEND_URL", '"https://webdashboard.safepal.co/"'
-            buildConfigField "String", "BASE_API_URL", '"https://api.safepal.co/api/v1"'
+            buildConfigField "String", "DJANGO_BACKEND_URL", '"https://safepalcms.mglsd.go.ug"'
+            buildConfigField "String", "BASE_API_URL", '"https://safepalapi.mglsd.go.ug/api/v1"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
